before final ENG essay

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,10 @@
             "language": "markdown",
             "scheme": "file",
             "pattern": "2022-05-19-ENG-reflexive-essay.md"
+        },
+        {
+            "language": "markdown",
+            "scheme": "file"
         }
     ]
 }
